# globaltrustauthority-rbs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
rbs/: Cargo.toml
rbs/api-types/: Cargo.toml
rbs/api-types/src/: .gitkeep  api.rs  auth.rs  constants.rs  error.rs  lib.rs  policy.rs  resource.rs  user.rs  version.rs
rbs/api-types/src/config/: mod.rs  validation.rs
rbs/api-types/src/openapi/system/: version.rs
rbs/api-types/tests/: constants_test.rs  error_test.rs  resource_test.rs  system_test.rs  user_test.rs
rbs/conf/: .gitkeep  rbs.yaml
rbs/core/: Cargo.toml
rbs/core/src/: lib.rs
rbs/core/src/admin/: .gitkeep  entity.rs  key.rs  manager.rs  mod.rs
rbs/core/src/attestation/: .gitkeep  manager.rs  provider.rs
rbs/core/src/attestation/gta/: builtin.rs  mod.rs  rest.rs
rbs/core/src/auth/: .gitkeep  authenticator.rs  authz.rs  authz_checker.rs  context.rs  error.rs  jwt.rs  mod.rs  token.rs
rbs/core/src/auth/authn/: authenticator.rs  bearer_token.rs  common.rs  jwks.rs  jwt.rs  lockout.rs  mod.rs  signature.rs  token.rs
rbs/core/src/infra/: .gitkeep
rbs/core/src/policy/: .gitkeep  config.rs  error.rs  mod.rs  repository.rs  service.rs  validator.rs
rbs/core/src/policy_engine/: .gitkeep  error.rs  mod.rs
rbs/core/src/resource/: .gitkeep  config.rs  error.rs  manager.rs  mod.rs  provider.rs  repository.rs  service.rs  validator.rs
rbs/core/src/system/: .gitkeep
rbs/core/tests/: attestation_manager_tests.rs  auth_common_tests.rs  auth_error_tests.rs  authz_builder_tests.rs  authz_enums_tests.rs  authz_facade_tests.rs  db_policy_client_tests.rs  infra_rdb_error_tests.rs  logging_tests.rs  policy_config_tests.rs  policy_engine_tests.rs  policy_error_tests.rs  policy_repository_tests.rs  policy_service_tests.rs  policy_validator_tests.rs  rdb_connection_tests.rs  resource_config_tests.rs  resource_error_tests.rs  resource_repository_tests.rs  resource_service_tests.rs  resource_validator_tests.rs
rbs/rdb_sql/: sqlite_rbs.sql
rbs/rest/: Cargo.toml
rbs/rest/src/: lib.rs
rbs/rest/src/api_doc/: document.rs
rbs/rest/src/middleware/: auth.rs  mod.rs
rbs/rest/src/routes/: .gitkeep  admin.rs  attestation.rs  auth.rs  error.rs  mod.rs  policy.rs  resource.rs
rbs/rest/src/server/: http.rs  rate_limit.rs
rbs/rest/tests/: handler_tests.rs  http_tests.rs
rbs/src/: lib.rs
tools/rbs-admin-client/: Cargo.toml
tools/rbs-admin-client/src/: client.rs  error.rs  lib.rs  path_url.rs  resource.rs  resource_policy.rs  user.rs
tools/rbs-admin-client/src/attestation/: cert.rs  mod.rs  policy.rs  ref_value.rs
tools/rbs-admin-client/tests/: test_attestation_policy.rs  test_attestation_ref_value.rs  test_cert.rs  test_policy.rs  test_ref_value.rs  test_resource.rs  test_resource_policy.rs  test_user.rs  test_user_client.rs
(+110 files in other folders)
