[package]
name = "rbs-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RBS core business logic"

[dependencies]
rbs-api-types = { path = "../api-types" }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
anyhow.workspace = true
sea-orm.workspace = true
flate2.workspace = true
tokio.workspace = true
thiserror.workspace = true
async-trait.workspace = true
base64.workspace = true
rand.workspace = true
reqwest.workspace = true
policy_engine = { git = "https://gitcode.com/openeuler/global-trust-authority", package = "policy_engine" }

[dev-dependencies]
tempfile = "3"
# Used by `logging_init_stderr` (Unix) to redirect stderr and assert log output.
libc = "0.2"
