[package]
name = "rbs-admin-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RBS admin client (user, resource, policy, attestation management)"

[lib]
name = "rbs_admin_client"
path = "src/lib.rs"

[dependencies]
rbs-api-types = { path = "../../rbs/api-types" }
