[package]
name = "rbs-admin-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RBS admin client (user, resource, policy, attestation management)"

[lib]
name = "rbs_admin_client"
path = "src/lib.rs"

[dependencies]
rbs-api-types = { path = "../../rbs/api-types" }
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
serde_json.workspace = true
wiremock.workspace = true
